// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolInputContainerFc should render correctly 1`] = `<div class="input"></div>`;

exports[`KolInputContainerFc should render with both startAdornment and endAdornment 1`] = `
<div class="input">
  <div class="inputAdornment-start">
    <kol-icon _icons="codicon codicon-start-icon" _label=""></kol-icon>
  </div>
  <div class="inputAdornment-end">
    <kol-icon _icons="codicon codicon-end-icon" _label=""></kol-icon>
  </div>
</div>
`;

exports[`KolInputContainerFc should render with children 1`] = `
<div class="input">
  <input type="text">
</div>
`;

exports[`KolInputContainerFc should render with endAdornment 1`] = `
<div class="input">
  <div class="inputAdornment-end">
    <kol-icon _icons="codicon codicon-end-icon" _label=""></kol-icon>
  </div>
</div>
`;

exports[`KolInputContainerFc should render with startAdornment 1`] = `
<div class="input">
  <div class="inputAdornment-start">
    <kol-icon _icons="codicon codicon-start-icon" _label=""></kol-icon>
  </div>
</div>
`;
